# voicepro

./: .gitignore  CMakeLists.txt  README.md  help.txt
src/: audio_engine.cpp  audio_engine.h  audio_renderer.cpp  audio_renderer.h  audio_session.cpp  audio_session.h  gui.cpp  gui.h  language.cpp  language.h  main.cpp  microphone_capture.cpp  microphone_capture.h  process_loopback.cpp  process_loopback.h  resource.h  resources.aps  resources.rc  ring_buffer.h
